create & use bootstrap layout

--- a/views/home.gohtml
+++ b/views/home.gohtml
@@ -1,6 +1,8 @@
-<h1>
-  Welcome to my beautiful site
-</h1>
+{{define "yield"}}
+  <h1>
+    Welcome to my beautiful site
+  </h1>
 
-{{template "footer"}}
+  {{template "footer"}}
+{{end}}
 
