--- a/views/layouts/navbar.gohtml
+++ b/views/layouts/navbar.gohtml
@@ -1,7 +1,6 @@
 {{define "navbar"}}
 <nav class="navbar navbar-default">
   <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
@@ -12,13 +11,15 @@
       <a class="navbar-brand" href="/">Shutters</a>
     </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="/">Home</a></li>
         <li><a href="/contact">Contact</a></li>
       </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="/signup">Sign Up</a></li>
+      </ul>
+    </div>
+  </div>
 </nav>
 {{end}}
