--- a/views/layouts/bootstrap.gohtml
+++ b/views/layouts/bootstrap.gohtml
@@ -6,7 +6,7 @@
     <title>Shutters</title>
   </head>
   <body>
-    {{template "navbar"}}}
+    {{template "navbar"}}
     <div class="container-fluid">
       <!-- Our content will come in here dynamically-->
       <!-- pass all data passed into template down to yield-->
