--- a/views/layouts/bootstrap.gohtml
+++ b/views/layouts/bootstrap.gohtml
@@ -19,6 +19,11 @@
     </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <style>
+      footer {
+        padding-top: 60px;
+      }
+    </style>
   </body>
 </html>
 {{end}}
