--- a/views/galleries/edit.gohtml
+++ b/views/galleries/edit.gohtml
@@ -72,5 +72,11 @@
 {{end}}
 
 {{define "galleryImages"}}
-<p>Coming soon...</p>
+<ul>
+  {{range .Images}}
+    <li>
+      {{.}}
+    </li>
+  {{end}}
+</ul>
 {{end}}
