--- a/views/galleries/edit.gohtml
+++ b/views/galleries/edit.gohtml
@@ -1,7 +1,10 @@
 {{define "yield"}}
 <div class="row">
   <div class="col-md-10 col-md-offset-1">
-    <h2>Edit your gallery</h3>
+    <h2>Edit your gallery</h2>
+    <a href="/gallery/{{.ID}}">
+      View this gallery
+    </a>
     <hr>
   </div>
   <div class="col-md-12">
@@ -72,11 +75,18 @@
 {{end}}
 
 {{define "galleryImages"}}
-<ul>
-  {{range .Images}}
-    <li>
-      {{.}}
-    </li>
+{{range .ImagesSplitN 6}}
+    <div class="col-md-2">
+      {{range .}}
+        <a href="{{.}}">
+          <img src="{{.}}" class="thumbnail">
+        </a>
+      {{end}}
+    </div>
   {{end}}
-</ul>
+  <style>
+  .thumbnail {
+    width: 100%;
+  }
+</style>
 {{end}}
