--- a/views/galleries/show.gohtml
+++ b/views/galleries/show.gohtml
@@ -4,13 +4,29 @@
     <h1>
       {{.Title}}
     </h1>
-    <ul>
-      {{range .Images}}
-        <li>
-          {{.}}
-        </li>
-      {{end}}
-    </ul>
+    <hr>
   </div>
 </div>
+<div class="row">
+  {{range .ImagesSplitN 3}}
+    <div class="col-md-4">
+      {{range .}}
+        <a href="{{.}}">
+          <img src="{{.}}" class="thumbnail">
+        </a>
+      {{end}}
+    </div>
+  {{end}}
+</div>
+
+<!--
+Normally styles in the middle of your code is bad,
+but for dev I think this is fine. We will fix it up
+when we deploy
+-->
+<style>
+  .thumbnail {
+    width: 100%;
+  }
+</style>
 {{end}}
