--- a/views/galleries/edit.gohtml
+++ b/views/galleries/edit.gohtml
@@ -1,8 +1,8 @@
 {{define "yield"}}
 <div class="row">
   <div class="col-md-10 col-md-offset-1">
-    <h2>Edit your gallery</h2>
-    <a href="/gallery/{{.ID}}">
+    <h2>Edit your gallery</h3>
+    <a href="/galleries/{{.ID}}">
       View this gallery
     </a>
     <hr>
@@ -75,18 +75,32 @@
 {{end}}
 
 {{define "galleryImages"}}
-{{range .ImagesSplitN 6}}
+  {{range .ImagesSplitN 6}}
     <div class="col-md-2">
       {{range .}}
-        <a href="{{.}}">
-          <img src="{{.}}" class="thumbnail">
+        <a href="{{.Path}}">
+          <img src="{{.Path}}" class="thumbnail">
         </a>
+        {{template "deleteImageForm" .}}
       {{end}}
     </div>
   {{end}}
+  <!--
+  Normally styles in the middle of your code is bad,
+  but for dev I think this is fine. We will fix it up
+  when we deploy
+  -->
   <style>
-  .thumbnail {
-    width: 100%;
-  }
-</style>
+    .thumbnail {
+      width: 100%;
+      margin-bottom: 6px;
+    }
+  </style>
+{{end}}
+
+
+{{define "deleteImageForm"}}
+<form action="/galleries/{{.GalleryID}}/images/{{.Filename}}/delete" method="POST">
+  <button type="submit" class="btn btn-default">Delete</button>
+</form>
 {{end}}
