--- a/views/users/new.gohtml
+++ b/views/users/new.gohtml
@@ -6,7 +6,7 @@
         <h3 class="panel-title">Sign Up Now!</h3>
       </div>
       <div class="panel-body">
-        {{template "signupForm"}}
+        {{template "signupForm" .}}
       </div>
     </div>
   </div>
@@ -18,11 +18,11 @@
   {{csrfField}}
     <div class="form-group">
       <label for="name">Full Name</label>
-      <input type="text" name="name" class="form-control" id="name" placeholder="Enter your name">
+      <input type="text" name="name" class="form-control" id="name" placeholder="Enter your name" value="{{.Name}}">
     </div>
     <div class="form-group">
       <label for="email">Email address</label>
-      <input type="email" name="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
+      <input type="email" name="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email" value={{.Email}}>
     </div>
     <div class="form-group">
       <label for="password">Password</label>
